@@ -9,10 +9,12 @@ import static org.mockito.Mockito.when;
 
 import dev.openfeature.sdk.fixtures.HookFixtures;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.concurrent.ConcurrentLinkedQueue;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -38,7 +40,13 @@ class HookSupportTest implements HookFixtures {
         var sharedContext = getBaseHookContextForType(FlagValueType.STRING);
         var hookSupportData = new HookSupportData();
         hookSupportData.evaluationContext = layered;
-        hookSupport.setHooks(hookSupportData, Arrays.asList(hook1, hook2), FlagValueType.STRING);
+        hookSupport.setHooks(
+                hookSupportData,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Arrays.asList(hook1, hook2),
+                Collections.emptyList(),
+                FlagValueType.STRING);
         hookSupport.setHookContexts(hookSupportData, sharedContext, layered);
 
         hookSupport.executeBeforeHooks(hookSupportData);
@@ -57,7 +65,13 @@ class HookSupportTest implements HookFixtures {
         Hook<?> genericHook = mockGenericHook();
 
         var hookSupportData = new HookSupportData();
-        hookSupport.setHooks(hookSupportData, List.of(genericHook), flagValueType);
+        hookSupport.setHooks(
+                hookSupportData,
+                List.of(genericHook),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                flagValueType);
 
         callAllHooks(hookSupportData);
 
@@ -73,7 +87,13 @@ class HookSupportTest implements HookFixtures {
     void shouldPassDataAcrossStages(FlagValueType flagValueType) {
         var testHook = new TestHookWithData();
         var hookSupportData = new HookSupportData();
-        hookSupport.setHooks(hookSupportData, List.of(testHook), flagValueType);
+        hookSupport.setHooks(
+                hookSupportData,
+                Collections.emptyList(),
+                List.of(testHook),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                flagValueType);
         hookSupport.setHookContexts(
                 hookSupportData,
                 getBaseHookContextForType(flagValueType),
@@ -102,7 +122,13 @@ class HookSupportTest implements HookFixtures {
         var testHook2 = new TestHookWithData(2);
 
         var hookSupportData = new HookSupportData();
-        hookSupport.setHooks(hookSupportData, List.of(testHook1, testHook2), flagValueType);
+        hookSupport.setHooks(
+                hookSupportData,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                Collections.emptyList(),
+                List.of(testHook1, testHook2),
+                flagValueType);
         hookSupport.setHookContexts(
                 hookSupportData,
                 getBaseHookContextForType(flagValueType),
@@ -112,6 +138,59 @@ class HookSupportTest implements HookFixtures {
 
         assertHookData(testHook1, 1, "before", "after", "finallyAfter", "error");
         assertHookData(testHook2, 2, "before", "after", "finallyAfter", "error");
+    }
+
+    @Test
+    @DisplayName("should place hooks in provider → options → client → API order")
+    void shouldOrderHooksBySource() {
+        Hook<?> providerHook = mockGenericHook();
+        Hook<?> optionHook = mockGenericHook();
+        Hook<?> clientHook = mockGenericHook();
+        Hook<?> apiHook = mockGenericHook();
+
+        var hookSupportData = new HookSupportData();
+        hookSupport.setHooks(
+                hookSupportData,
+                List.of(providerHook),
+                List.of(optionHook),
+                List.of(clientHook),
+                List.of(apiHook),
+                FlagValueType.STRING);
+
+        assertThat(hookSupportData.getHooks())
+                .extracting(Pair::getKey)
+                .containsExactly(providerHook, optionHook, clientHook, apiHook);
+    }
+
+    @Test
+    @DisplayName("empty ConcurrentLinkedQueue sources produce no hooks")
+    void emptyQueueSourcesProduceNoHooks() {
+        var hookSupportData = new HookSupportData();
+        hookSupport.setHooks(
+                hookSupportData,
+                new ConcurrentLinkedQueue<>(),
+                new ConcurrentLinkedQueue<>(),
+                new ConcurrentLinkedQueue<>(),
+                new ConcurrentLinkedQueue<>(),
+                FlagValueType.STRING);
+        assertThat(hookSupportData.getHooks()).isEmpty();
+    }
+
+    @Test
+    @DisplayName("non-empty ConcurrentLinkedQueue source is not skipped")
+    void nonEmptyQueueSourceIsNotSkipped() {
+        Hook<?> hook = mockGenericHook();
+        var queue = new ConcurrentLinkedQueue<Hook>();
+        queue.add(hook);
+        var hookSupportData = new HookSupportData();
+        hookSupport.setHooks(
+                hookSupportData,
+                new ConcurrentLinkedQueue<>(),
+                new ConcurrentLinkedQueue<>(),
+                queue,
+                new ConcurrentLinkedQueue<>(),
+                FlagValueType.STRING);
+        assertThat(hookSupportData.getHooks()).extracting(Pair::getKey).containsExactly(hook);
     }
 
     @Test
@@ -132,7 +211,13 @@ class HookSupportTest implements HookFixtures {
         var layeredEvaluationContext =
                 new LayeredEvaluationContext(evaluationContextWithValue("key", "value"), null, null, null);
         hookSupportData.evaluationContext = layeredEvaluationContext;
-        hookSupport.setHooks(hookSupportData, List.of(recursiveHook, emptyHook), FlagValueType.STRING);
+        hookSupport.setHooks(
+                hookSupportData,
+                Collections.emptyList(),
+                Collections.emptyList(),
+                List.of(recursiveHook, emptyHook),
+                Collections.emptyList(),
+                FlagValueType.STRING);
         hookSupport.setHookContexts(
                 hookSupportData, getBaseHookContextForType(FlagValueType.STRING), layeredEvaluationContext);
 
@@ -180,6 +265,8 @@ class HookSupportTest implements HookFixtures {
         switch (flagValueType) {
             case INTEGER:
                 return 1;
+            case LONG:
+                return 1L;
             case BOOLEAN:
                 return true;
             case STRING:
